k8s/FileUploader/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: front
    spec:
      containers:
        - env:
            - name: KEYCLOAK_ID
              valueFrom:
                configMapKeyRef:
                  key: KEYCLOAK_ID
                  name: front-env-local
            - name: KEYCLOAK_ISSUER
              valueFrom:
                configMapKeyRef:
                  key: KEYCLOAK_ISSUER
                  name: front-env-local
            - name: KEYCLOAK_SECRET
              valueFrom:
                configMapKeyRef:
                  key: KEYCLOAK_SECRET
                  name: front-env-local
            - name: NEXTAUTH_URL
              valueFrom:
                configMapKeyRef:
                  key: NEXTAUTH_URL
                  name: front-env-local
            - name: NEXT_PUBLIC_BACK_URL
              valueFrom:
                configMapKeyRef:
                  key: NEXT_PUBLIC_BACK_URL
                  name: front-env-local
            - name: NEXT_PUBLIC_FRONT_URL
              valueFrom:
                configMapKeyRef:
                  key: NEXT_PUBLIC_FRONT_URL
                  name: front-env-local
            - name: NEXT_PUBLIC_GOOGLE_CLIENT_ID
              valueFrom:
                configMapKeyRef:
                  key: NEXT_PUBLIC_GOOGLE_CLIENT_ID
                  name: front-env-local
            - name: NEXT_PUBLIC_GOOGLE_CLIENT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: NEXT_PUBLIC_GOOGLE_CLIENT_SECRET
                  name: front-env-local
            - name: NEXT_PUBLIC_NEXTAUTH_SECRET
              valueFrom:
                configMapKeyRef:
                  key: NEXT_PUBLIC_NEXTAUTH_SECRET
                  name: front-env-local
          image: ghcr.io/syou551/file-uploader-front:latest
          name: front
          ports:
            - containerPort: 3000
              protocol: TCP
          workingDir: /node/FileUploader/front/dir-share
      restartPolicy: Always
