k8s/FileUploader/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: nginx
    spec:
      containers:
        - image: ghcr.io/syou551/file-uploader-nginx:latest
          name: nginx
          ports:
          - containerPort: 8080
      restartPolicy: Always
