k8s/FileUploader/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: front
  name: front
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: front
