k8s/FileUploader/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: oauth2-proxy
  name: oauth2-proxy
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 4180
  selector:
    io.kompose.service: oauth2-proxy
